--- a/index.html
+++ b/index.html
@@ -100,13 +100,19 @@
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/appendices/npcs">速成NPC</a></li>
       </ul>
     </li>
-    <li class="dropdown">
+    <li class="dropdown customNavItem dwg">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">地城世界帶團指南 <b class="caret"></b></a>
       <ul class="dropdown-menu">
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/dwg/dungeonworldguide">地城世界帶團指南</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/dwg/sample_campaign_front">範例戰役前置</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/dwg/compendium_classes">範例概略職業</a></li>
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/dwg/example_of_play">遊玩範例</a></li>
+      </ul>
+    </li>
+    <li class="dropdown customNavItem otherclass">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">第三方職業擴充 <b class="caret"></b></a>
+      <ul class="dropdown-menu">
+        <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/3ppclass/branded">烙印者</a></li>
       </ul>
     </li>
   </ul>
