--- a/monsters/woods/index.html
+++ b/monsters/woods/index.html
@@ -112,6 +112,9 @@
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/3ppclass/branded">烙印者</a></li>
       </ul>
     </li>
+    <li class="dropdown customNavItem otherclass">
+      <a href="https://yusuke0405.booth.pm/items/3062464" target="_blank">ccfolia用盤面素材 </b></a>
+    </li>
   </ul>
  
 </div>
