--- a/index.html
+++ b/index.html
@@ -115,9 +115,6 @@
         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/3ppclass/branded">烙印者</a></li>
       </ul>
     </li>
-    <li class="dropdown customNavItem otherclass">
-      <a href="https://yusuke0405.booth.pm/items/3062464" target="_blank">ccfolia用盤面素材 </b></a>
-    </li>
   </ul>
  
 </div>
@@ -152,8 +149,9 @@
 
 <h2>外部資源</h2>
 <ul>
-  <li><a href="https://drive.google.com/open?id=1wtc4XlVjhM0uZEG6KwUfRo3Eyle0FPCN">事前準備文件(.pdf)</a></li>
-  <li><a href="https://docs.google.com/spreadsheets/d/1notFC2cmqbCQNN6zQlIMFHH1y-Ww-1KBwdYwUWgLmA0/edit?usp=sharing">線上角色卡</a></li>
+  <li><a href="https://drive.google.com/open?id=1wtc4XlVjhM0uZEG6KwUfRo3Eyle0FPCN" target="_blank">事前準備文件(.pdf)</a></li>
+  <li><a href="https://docs.google.com/spreadsheets/d/1notFC2cmqbCQNN6zQlIMFHH1y-Ww-1KBwdYwUWgLmA0/edit?usp=sharing" target="_blank">線上角色卡</a></li>
+  <li><a href="https://yusuke0405.booth.pm/items/3062464" target="_blank">ccfolia用盤面素材</a></li>
 </ul>
           </div>
        </div>
